k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-platform-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/foods
            pathType: Prefix
            backend:
              service:
                name: food-service
                port:
                  number: 8091

          - path: /api/groceries
            pathType: Prefix
            backend:
              service:
                name: grocerre
                port:
                  number: 8092

          - path: /api/dineouts
            pathType: Prefix
            backend:
              service:
                name: d-service
                port:
                  number: 8093

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
